--- a/Index.html
+++ b/Index.html
@@ -1102,3 +1102,104 @@ service firebase.storage {
     }
   }
 }
+const firebaseConfig = {
+  apiKey: "AIzaSyYourActualAPIKey",
+  authDomain: "your-project.firebaseapp.com",
+  projectId: "your-project-id",
+  storageBucket: "your-bucket.appspot.com",
+  messagingSenderId: "1234567890",
+  appId: "1:1234567890:web:abcdef1234567890"
+};
+        // In your Firebase Admin SDK (server-side)
+admin.auth().setCustomUserClaims(uid, { admin: true }).then(() => {
+  console.log('Admin privileges granted');
+});
+
+        # Install Firebase CLI
+npm install -g firebase-tools
+
+# Deploy rules
+firebase deploy --only firestore,storage
+        service firebase.storage {
+  match /b/{bucket}/o {
+    match /media/{allPaths=**} {
+      allow read: if true;
+      allow write: if request.auth != null && request.auth.token.admin == true;
+    }
+  }
+        // Add to script
+const errorMessages = {
+  en: {
+    authError: "Authentication failed. Please check your credentials.",
+    submissionError: "Failed to save results. Please try again."
+  },
+  // Add other languages...
+};
+
+function showTranslatedError(messageKey, lang = 'en') {
+  const errorEl = document.getElementById('globalError');
+  errorEl.textContent = errorMessages[lang][messageKey];
+  errorEl.style.display = 'block';
+}
+}
+        let selectedDifficulty = 'all'; // Module-level variable
+
+function initQuiz(user) {
+  document.querySelectorAll('.difficulty-selector button').forEach(btn => {
+    btn.addEventListener('click', () => {
+      selectedDifficulty = btn.dataset.difficulty;
+      filterQuestions(selectedDifficulty);
+    });
+  });
+  // ...
+}
+        function toggleLoading(show) {
+  document.getElementById('loadingSpinner').style.display = show ? 'block' : 'none';
+}
+
+// Usage in auth handler
+document.getElementById('authForm').addEventListener('submit', async (e) => {
+  e.preventDefault();
+  toggleLoading(true);
+  // ... auth logic
+  toggleLoading(false);
+});
+        // Client-side validation
+function validateForm(email, password) {
+  const emailRegex = /^[^\s@]+@[^\s@]+\.[^\s@]+$/;
+  if (!emailRegex.test(email)) return false;
+  if (password.length < 8) return false;
+  return true;
+}
+
+// Sanitize inputs
+function sanitizeInput(input) {
+  return input.replace(/</g, '&lt;').replace(/>/g, '&gt;');
+}
+      service cloud.firestore {
+  match /databases/{database}/documents {
+    match /scores/{doc} {
+      allow create: if request.time < request.resource.data.timestamp + duration.value(5, 'm');
+      // Additional rate limiting logic here
+    }
+  }
+}
+          
+        <div id="loadingSpinner" class="loading-spinner" style="display: none;"></div>
+        <form id="authForm" onsubmit="return validateAuthForm()">
+  <input type="email" id="email" required 
+         pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,4}$">
+  <input type="password" id="password" required 
+         minlength="8" 
+         title="At least 8 characters">
+        </form>
+        function validateAuthForm() {
+  const email = document.getElementById('email').value;
+  const password = document.getElementById('password').value;
+  
+  if (!validateForm(email, password)) {
+    showError('Please enter valid email and password (min 8 characters)');
+    return false;
+  }
+  return true;
+}
