Update coggggde (4) (21).html

--- a/code (4) (21).html
+++ b/code (4) (21).html
@@ -759,5 +759,87 @@
             <p class="transcript-line"><span class="timestamp">[41:55:68]</span> Jaise hi aapne apni wife ke baare mein socha,</p>
             <p class="transcript-line"><span class="timestamp">[41:59:18]</span> ya apni wife ko dekha,</p>
             <p class="transcript-line"><span class="timestamp">[42:03:00]</span> ya uski awaz ko suna,</p>
-            <p class="transcript-line"><span class="timestamp">[42:05:46]</span> toh pati paida ho jata hai.</p>
-            <p class="transcript-line"><span class="timestamp
+            <p class="transcript-line"><span class="timestamp">[42:05:46]</span> toh pati paida ho jata hai.<p class="transcript-line"><span class="timestamp">[42:08:44]</span> Ek baap ki feelings apni beti ko le kar ke,</p>
+            <p class="transcript-line"><span class="timestamp">[42:10:48]</span> aur ek pati ki feelings apni patni ko le kar ke, kya same hoti hain ya alag-alag hoti hain?</p>
+            <p class="transcript-line"><span class="timestamp">[42:15:36]</span> Bilkul alag.</p>
+            <p class="transcript-line"><span class="timestamp">[42:17:85]</span> Bilkul alag.</p>
+            <p class="transcript-line"><span class="timestamp">[42:19:34]</span> Door door tak kahin kuch nahi milta hai.</p>
+            <p class="transcript-line"><span class="timestamp">[42:21:49]</span> Aap note karoge dono alag-alag insaan hain.</p>
+            <p class="transcript-line"><span class="timestamp">[42:25:68]</span> Aapka behavior change ho jata hai.</p>
+            <p class="transcript-line"><span class="timestamp">[42:28:18]</span> Kabhi note kiya hai?</p>
+            <p class="transcript-line"><span class="timestamp">[42:29:48]</span> Jab aap apne bacchon ke saath mein khel rahe hote ho, toh aap kuch aur hote ho.</p>
+            <p class="transcript-line"><span class="timestamp">[42:34:60]</span> Koi aur hota hai, aap nahi hote uss samay.</p>
+            <p class="transcript-line"><span class="timestamp">[42:37:37]</span> Aap kuch aur ban gaye hote ho, aur jab aap apne father ke saath mein baithe hote ho,</p>
+            <p class="transcript-line"><span class="timestamp">[42:42:07]</span> apne parents ke saath mein baithe hote ho,</p>
+            <p class="transcript-line"><span class="timestamp">[42:43:97]</span> toh koi aur insaan hota hai.</p>
+            <p class="transcript-line"><span class="timestamp">[42:46:17]</span> Uski body language kuch aur hoti hai.</p>
+            <p class="transcript-line"><span class="timestamp">[42:48:47]</span> Uski baatein kuch aur hoti hain.</p>
+            <p class="transcript-line"><span class="timestamp">[42:50:19]</span> Uske thoughts kuch aur hote hain.</p>
+            <p class="transcript-line"><span class="timestamp">[42:52:16]</span> Yeh ek alag account hai, woh ek alag account hai.</p>
+            <p class="transcript-line"><span class="timestamp">[42:54:68]</span> Ab maze ki baat kya hai? Isi tarah se ab isko uss boyfriend wale example se relate karo, jiski main baat kar raha tha.</p>
+            <p class="transcript-line"><span class="timestamp">[42:59:71]</span> Ki aapka breakup hua.</p>
+            <p class="transcript-line"><span class="timestamp">[43:01:06]</span> Matlab kya hua?</p>
+            <p class="transcript-line"><span class="timestamp">[43:03:00]</span> Jaise hi breakup hua,</p>
+            <p class="transcript-line"><span class="timestamp">[43:04:47]</span> woh kab tak exist kar raha tha ek boyfriend?</p>
+            <p class="transcript-line"><span class="timestamp">[43:06:49]</span> Jab tak ki affair tha.</p>
+            <p class="transcript-line"><span class="timestamp">[43:09:18]</span> Tab tak woh boyfriend tha.</p>
+            <p class="transcript-line"><span class="timestamp">[43:11:47]</span> Jab affair khatam, toh</p>
+            <p class="transcript-line"><span class="timestamp">[43:13:43]</span> boyfriend khatam.</p>
+            <p class="transcript-line"><span class="timestamp">[43:16:38]</span> Socho, kitna simple hai.</p>
+            <p class="transcript-line"><span class="timestamp">[43:18:49]</span> Jab is tareeke se aap chalte jaoge, aapko cheezein samajh aati jayegi, pakad mein aati jayegi,</p>
+            <p class="transcript-line"><span class="timestamp">[43:22:68]</span> toh aap ek second mein pakad loge</p>
+            <p class="transcript-line"><span class="timestamp">[43:24:36]</span> ki "accha,</p>
+            <p class="transcript-line"><span class="timestamp">[43:25:68]</span> jo dukhi ho raha hai, woh toh boyfriend hai."</p>
+            <p class="transcript-line"><span class="timestamp">[43:28:44]</span> Kitna aasan hai!</p>
+            <p class="transcript-line"><span class="timestamp">[43:40:48]</span> Aur dekho kitna mazedaar hai yeh.</p>
+            <p class="transcript-line"><span class="timestamp">[43:42:68]</span> Woh boyfriend jo mar chuka hai,</p>
+            <p class="transcript-line"><span class="timestamp">[43:46:69]</span> mar gaya na?</p>
+            <p class="transcript-line"><span class="timestamp">[43:47:64]</span> Kahan hai boyfriend, dikhao?</p>
+            <p class="transcript-line"><span class="timestamp">[43:50:60]</span> Boyfriend sirf tab tak tha jab tak ki woh aapki girlfriend thi.</p>
+            <p class="transcript-line"><span class="timestamp">[43:53:71]</span> Ab woh kisi aur ki girlfriend hai.</p>
+            <p class="transcript-line"><span class="timestamp">[43:55:30]</span> Toh uss girlfriend ka boyfriend koi aur hai.</p>
+            <p class="transcript-line"><span class="timestamp">[43:57:95]</span> Aap nahi ho.</p>
+            <p class="transcript-line"><span class="timestamp">[44:02:81]</span> Ab ek naya paida ho gaya, woh hai 'ex-boyfriend'.</p>
+            <p class="transcript-line"><span class="timestamp">[44:07:33]</span> Jiske thoughts, jiski feelings, usse bilkul alag hai jo boyfriend tha.</p>
+            <p class="transcript-line"><span class="timestamp">[44:12:48]</span> Woh ek alag insaan hai.</p>
+            <p class="transcript-line"><span class="timestamp">[44:15:36]</span> Koi aur paida ho chuka hai.</p>
+            <p class="transcript-line"><span class="timestamp">[44:16:85]</span> Dhyan se pakdo. Kya ho raha hai?</p>
+            <p class="transcript-line"><span class="timestamp">[44:20:10]</span> Toh ab aapko kya hoga jab aap baith kar ke usko dekhoge,</p>
+            <p class="transcript-line"><span class="timestamp">[44:22:68]</span> in saari baaton ko samjhoge, aapko samajh aayegi,</p>
+            <p class="transcript-line"><span class="timestamp">[44:25:31]</span> aap kahoge "haan yaar, chalo samajh aa gaya.</p>
+            <p class="transcript-line"><span class="timestamp">[44:27:60]</span> Yeh toh samajh aa gaya ki yeh boyfriend mar chuka hai.</p>
+            <p class="transcript-line"><span class="timestamp">[44:29:81]</span> Toh jo mar gaya uske liye kyon rona hai?"</p>
+            <p class="transcript-line"><span class="timestamp">[44:32:68]</span> Main kisliye dukhi ho raha hu?</p>
+            <p class="transcript-line"><span class="timestamp">[44:34:09]</span> Ab dekhta hu mere aur zinda kaun se hain.</p>
+            <p class="transcript-line"><span class="timestamp">[44:36:95]</span> "Accha, ek beta zinda hai."</p>
+            <p class="transcript-line"><span class="timestamp">[44:43:08]</span> Aur end mein jab in saari identifications ko aap chhod dete ho, toh aapko samajh aa jata hai,</p>
+            <p class="transcript-line"><span class="timestamp">[44:47:71]</span> ki agar yeh sab bhi khatam ho jaata hai,</p>
+            <p class="transcript-line"><span class="timestamp">[44:50:81]</span> toh in sab se aapko koi fark nahi padta.</p>
+            <p class="transcript-line"><span class="timestamp">[45:03:00]</span> "You" as a father marta hai, "you" as a son mar sakta hai, "you" as a boyfriend mar sakta hai, "you" as a husband mar sakta hai,</p>
+            <p class="transcript-line"><span class="timestamp">[45:10:07]</span> "you" as an employee mar sakta hai, jaise hi aapne uss company ko chhod diya toh "you" as an employee of that particular company has died.</p>
+            <p class="transcript-line"><span class="timestamp">[45:16:04]</span> You do not exist anymore.</p>
+            <p class="transcript-line"><span class="timestamp">[45:18:61]</span> Ab koi aur employee paida ho gaya hai.</p>
+            <p class="transcript-line"><span class="timestamp">[45:20:64]</span> "You" as an entrepreneur mar sakta hai.</p>
+            <p class="transcript-line"><span class="timestamp">[45:22:96]</span> Sab kuch mar sakta hai. Lekin is sab mein aap dekhoge,</p>
+            <p class="transcript-line"><span class="timestamp">[45:25:31]</span> is poore ke poore jaal mein aap dekhoge,</p>
+            <p class="transcript-line"><span class="timestamp">[45:27:60]</span> beech mein jo khada hua hai,</p>
+            <p class="transcript-line"><span class="timestamp">[45:29:68]</span> woh nahi mar raha hai.</p>
+            <p class="transcript-line"><span class="timestamp">[45:36:88]</span> Toh ab kya dar hai?</p>
+            <p class="transcript-line"><span class="timestamp">[45:39:69]</span> Socho.</p>
+            <p class="transcript-line"><span class="timestamp">[45:42:87]</span> Is boyfriend ne aapko paida kiya tha ya aapne is boyfriend ko paida kiya tha?</p>
+            <p class="transcript-line"><span class="timestamp">[45:46:89]</span> Aapne paida kiya tha.</p>
+            <p class="transcript-line"><span class="timestamp">[45:47:95]</span> Toh dobara paida kar lo!</p>
+            <p class="transcript-line"><span class="timestamp">[45:58:65]</span> Ya nahi karna, mat karo.</p>
+            <p class="transcript-line"><span class="timestamp">[46:00:81]</span> You have a choice.</p>
+            <p class="transcript-line"><span class="timestamp">[46:02:64]</span> Aap kaho,</p>
+            <p class="transcript-line"><span class="timestamp">[46:04:08]</span> ki nahi mujhe abhi boyfriend paida nahi karna, meri family ki jo conditions hain woh abhi allow nahi kar rahi.</p>
+            <p class="transcript-line"><span class="timestamp">[46:08:16]</span> Bhaiya iske liye thoda bahut paisa chahiye, jeb mein paisa nahi hai.</p>
+            <p class="transcript-line"><span class="timestamp">[46:10:48]</span> Toh abhi main,</p>
+            <p class="transcript-line"><span class="timestamp">[46:11:80]</span> apne aap ko as a student paida kar leta hu.</p>
+            <p class="transcript-line"><span class="timestamp">[46:15:68]</span> "Yeh mera time hai padhne ka, toh main padhunga."</p>
+        </div>
+    </div>
+
+</body>
+</html>
+```
