Paise se paise kaise kamaye

--- a/code (7) (26).html
+++ b/code (7) (26).html
@@ -2067,3 +2067,360 @@
             </div>
         </div>
         <div 
+    <span class="speaker">Sandeep Maheshwari:</span>Ulte ho jao aur bhaag jao wahan se, rukna mat galti se bhi. (Laughter).
+            </div>
+        </div>
+        <div class="segment">
+            <div class="timestamp">00:23:52</div>
+            <div class="text">
+                <span class="speaker">Sandeep Maheshwari:</span>Aisi bahut saari schemes chal rahi hain market mein. Unlimited. Aur karodon logon ne apne paise gawaye hain in chakron mein.
+            </div>
+        </div>
+        <div class="segment">
+            <div class="timestamp">00:23:58</div>
+            <div class="text">
+                <span class="speaker">Sandeep Maheshwari:</span>Health insurance is must. Aaj ke time mein bahut zaroori hai.
+            </div>
+        </div>
+        <div class="segment">
+            <div class="timestamp">00:24:02</div>
+            <div class="text">
+                <span class="speaker">Sandeep Maheshwari:</span>Nahi toh hoga kya? Aapne paisa bachaya, maan lo bahut effort kiya, bahut mehnat kari, pata nahi kya-kya kara aur ek x amount aapne bacha liya, 10 saal, 20 saal kaam karke, maan lo 10-20 lakh rupaye aapne bacha liya.
+            </div>
+        </div>
+        <div class="segment">
+            <div class="timestamp">00:24:13</div>
+            <div class="text">
+                <span class="speaker">Sandeep Maheshwari:</span>Aur agar koi bimari ho gayi toh kitni der lagegi us paise ko khatam hone mein?
+            </div>
+        </div>
+        <div class="segment">
+            <div class="timestamp">00:24:16</div>
+            <div class="text">
+                <span class="speaker">Audience:</span>Hafta, 10 din, 15 din.
+            </div>
+        </div>
+        <div class="segment">
+            <div class="timestamp">00:24:18</div>
+            <div class="text">
+                <span class="speaker">Sandeep Maheshwari:</span>Kitne log practically meri is baat se relate kar paa rahe hain?
+            </div>
+        </div>
+        <div class="segment">
+            <div class="timestamp">00:24:21</div>
+            <div class="text">
+                <span class="speaker">Sandeep Maheshwari:</span>Sab kar paa rahe hain.
+            </div>
+        </div>
+        <div class="segment">
+            <div class="timestamp">00:24:23</div>
+            <div class="text">
+                <span class="speaker">Sandeep Maheshwari:</span>Aur kitno ne health insurance karai hui hai?
+            </div>
+        </div>
+        <div class="segment">
+            <div class="timestamp">00:24:26</div>
+            <div class="text">
+                <span class="speaker">Sandeep Maheshwari:</span>Relate sab kar paa rahe hain lekin hardly aadhe log aise hain jinhone actual mein apni health insurance karai hui hai.
+            </div>
+        </div>
+        <div class="segment">
+            <div class="timestamp">00:24:36</div>
+            <div class="text">
+                <span class="speaker">Sandeep Maheshwari:</span>Kitna cover hai?
+            </div>
+        </div>
+        <div class="segment">
+            <div class="timestamp">00:24:37</div>
+            <div class="text">
+                <span class="speaker">Audience:</span>5 lakh, 10 lakh.
+            </div>
+        </div>
+        <div class="segment">
+            <div class="timestamp">00:24:39</div>
+            <div class="text">
+                <span class="speaker">Sandeep Maheshwari:</span>Kyunki agar aap cover zyada bhi lete ho toh premium aapko bahut zyada nahi dena padta hai.
+            </div>
+        </div>
+        <div class="segment">
+            <div class="timestamp">00:24:42</div>
+            <div class="text">
+                <span class="speaker">Sandeep Maheshwari:</span>Marginally extra hota hai. Usme aapki poori family cover ho jaati hai.
+            </div>
+        </div>
+        <div class="segment">
+            <div class="timestamp">00:24:46</div>
+            <div class="text">
+                <span class="speaker">Sandeep Maheshwari:</span>Matlab aap, aapki wife, aapke bacche, saare cover ho jaate hain.
+            </div>
+        </div>
+        <div class="segment">
+            <div class="timestamp">00:24:49</div>
+            <div class="text">
+                <span class="speaker">Sandeep Maheshwari:</span>Isko aap health insurance kaho, medical insurance kaho, must hai yeh. Ye honi hi chahiye.
+            </div>
+        </div>
+        <div class="segment">
+            <div class="timestamp">00:24:54</div>
+            <div class="text">
+                <span class="speaker">Sandeep Maheshwari:</span>Zyada tar aise cases mein kya hota hai jinhone koi health insurance apni nahi karai hoti hai?
+            </div>
+        </div>
+        <div class="segment">
+            <div class="timestamp">00:24:58</div>
+            <div class="text">
+                <span class="speaker">Sandeep Maheshwari:</span>Kyunki ab chhod toh sakte nahi us person ko jo hamare saath mein hai, ya khud agar kuch ho gaya toh ab apne aap ko ye toh nahi keh sakte ki haan marne do.
+            </div>
+        </div>
+        <div class="segment">
+            <div class="timestamp">00:25:05</div>
+            <div class="text">
+                <span class="speaker">Sandeep Maheshwari:</span>Aise mein kya hota hai? Ek toh savings aapki khatam hoti hain badi tezi se. Dusra kya khatam hota hai? Aur kya hota hai?
+            </div>
+        </div>
+        <div class="segment">
+            <div class="timestamp">00:25:11</div>
+            <div class="text">
+                <span class="speaker">Audience:</span>Loan.
+            </div>
+        </div>
+        <div class="segment">
+            <div class="timestamp">00:25:12</div>
+            <div class="text">
+                <span class="speaker">Sandeep Maheshwari:</span>Loan lena padega, udhaar lena padega.
+            </div>
+            </div>
+        </div>
+        <div class="segment">
+            <div class="timestamp">00:25:14</div>
+            <div class="text">
+                <span class="speaker">Sandeep Maheshwari:</span>Uss udhaar ko chukane ka matlab kya hai?
+            </div>
+        </div>
+        <div class="segment">
+            <div class="timestamp">00:25:16</div>
+            <div class="text">
+                <span class="speaker">Sandeep Maheshwari:</span>Ki aap kabhi zindagi mein dobara save kar hi nahi sakte.
+            </div>
+        </div>
+        <div class="segment">
+            <div class="timestamp">00:25:19</div>
+            <div class="text">
+                <span class="speaker">Sandeep Maheshwari:</span>Samajh rahe ho ye problem kitni badi hai? Aur kitni complicated hai ye?
+            </div>
+        </div>
+        <div class="segment">
+            <div class="timestamp">00:25:23</div>
+            <div class="text">
+                <span class="speaker">Sandeep Maheshwari:</span>Matlab zindagi mein kabhi aap paisa jod hi nahi paoge.
+            </div>
+        </div>
+        <div class="segment">
+            <div class="timestamp">00:25:26</div>
+            <div class="text">
+                <span class="speaker">Sandeep Maheshwari:</span>Kyunki jo kamaoge woh saara udhaar chukane mein lagta rahega.
+            </div>
+        </div>
+        <div class="segment">
+            <div class="timestamp">00:25:29</div>
+            <div class="text">
+                <span class="speaker">Sandeep Maheshwari:</span>Ya toh aap loan loge bank-vank se, ya apne kisi doston se yahan se wahan se. Jisse bhi loge.
+            </div>
+        </div>
+        <div class="segment">
+            <div class="timestamp">00:25:33</div>
+            <div class="text">
+                <span class="speaker">Sandeep Maheshwari:</span>Aur nahi doge unko wapas toh dosti kharab karoge.
+            </div>
+        </div>
+        <div class="segment">
+            <div class="timestamp">00:25:38</div>
+            <div class="text">
+                <span class="speaker">Sandeep Maheshwari:</span>Toh ab dhyan se samajhna. Ye jo term insurance hai, ye aapko karane ke liye koi nahi bolega.
+            </div>
+        </div>
+        <div class="segment">
+            <div class="timestamp">00:25:42</div>
+            <div class="text">
+                <span class="speaker">Sandeep Maheshwari:</span>Kyun? Kyunki isme jo insurance agent hai, usko paisa na ke barabar milega.
+            </div>
+        </div>
+        <div class="segment">
+            <div class="timestamp">00:25:47</div>
+            <div class="text">
+                <span class="speaker">Sandeep Maheshwari:</span>Jo endowment plans hote hain, jo ULIPs hote hain, usme unko achha khasa commission milta hai.
+            </div>
+        </div>
+        <div class="segment">
+            <div class="timestamp">00:25:52</div>
+            <div class="text">
+                <span class="speaker">Sandeep Maheshwari:</span>Kuch cases mein 30% tak bhi milta hai.
+            </div>
+        </div>
+        <div class="segment">
+            <div class="timestamp">00:25:55</div>
+            <div class="text">
+                <span class="speaker">Sandeep Maheshwari:</span>Agar aapne maano 20,000 ki insurance karai toh 30% cut gaya aapka.
+            </div>
+            <div class="timestamp">00:25:55</div>
+            <div class="text">
+                <span class="speaker">Sandeep Maheshwari:</span>Agar aapne maano 20,000 ki insurance karai toh 30% cut gaya aapka.
+            </div>
+        </div>
+        <div class="segment">
+            <div class="timestamp">00:25:59</div>
+            <div class="text">
+                <span class="speaker">Sandeep Maheshwari:</span>Aapka cut nahi gaya hai, aapka cut gaya hai. 6,000 rupaye gaya.
+            </div>
+        </div>
+        <div class="segment">
+            <div class="timestamp">00:26:04</div>
+            <div class="text">
+                <span class="speaker">Sandeep Maheshwari:</span>Agar 6,000 rupaye vaise hi kahin pe kho jaate hain, ya nahi milte hain, ya koi le karke aapse bhaag jaata hai, kitne din tak tension rehti hai?
+            </div>
+        </div>
+        <div class="segment">
+            <div class="timestamp">00:26:12</div>
+            <div class="text">
+                <span class="speaker">Sandeep Maheshwari:</span>Maze ki baat kya hai, aapko pata hi nahi hai ki aapke saath kya hua hai.
+            </div>
+        </div>
+        <div class="segment">
+            <div class="timestamp">00:26:16</div>
+            <div class="text">
+                <span class="speaker">Sandeep Maheshwari:</span>Ye jo term insurance hoti hai, isme na ke barabar katta hai.
+            </div>
+        </div>
+        <div class="segment">
+            <div class="timestamp">00:26:19</div>
+            <div class="text">
+                <span class="speaker">Sandeep Maheshwari:</span>Isme bas ek point hota hai jisko sunte hi aap logon ko jhatka lagega jinka conventional mindset hai.
+            </div>
+        </div>
+        <div class="segment">
+            <div class="timestamp">00:26:24</div>
+            <div class="text">
+                <span class="speaker">Sandeep Maheshwari:</span>Term insurance kya hoti hai ki aap itna paisa dete raho, maano aapne 10 saal diya, 20 saal diya, 30 saal diya.
+            </div>
+        </div>
+        <div class="segment">
+            <div class="timestamp">00:26:30</div>
+            <div class="text">
+                <span class="speaker">Sandeep Maheshwari:</span>30 saal baad aapko ek rupaye bhi wapas nahi aayega.
+            </div>
+        </div>
+        <div class="segment">
+            <div class="timestamp">00:26:33</div>
+            <div class="text">
+                <span class="speaker">Sandeep Maheshwari:</span>Oh sir! Yeh kya sir? Wapas nahi aayega toh fayda kya hai?
+            </div>
+        </div>
+        <div class="segment">
+            <div class="timestamp">00:26:38</div>
+            <div class="text">
+                <span class="speaker">Sandeep Maheshwari:</span>Insurance kis liye hoti hai? Kal ko aapko kuch ho jaaye.
+            </div>
+        </div>
+        <div class="segment">
+            <div class="timestamp">00:26:41</div>
+            <div class="text">
+                <span class="speaker">Sandeep Maheshwari:</span>Basic si baat samjho. Insurance ka jo matlab hota hai, woh hota hai ki agar aapko kuch ho gaya toh aapki family ko itna paisa mil jaaye ki unko tension na ho.
+            </div>
+        </div>
+        <div class="segment">
+            <div class="timestamp">00:26:51</div>
+            <div class="text">
+                <div class="segment">
+            <div class="timestamp">00:26:51</div>
+            <div class="text">
+                <span class="speaker">Sandeep Maheshwari:</span>Maan lo aap earning member ho family mein, aap mahine ka maano 30,000-40,000 kama rahe ho toh insurance ka matlab kya hai ki agar aapko kuch ho jaaye toh aapki family ko itna paisa milna chahiye ki unke paas 40-50 hazaar rupaye aata rahe.
+            </div>
+        </div>
+        <div class="segment">
+            <div class="timestamp">00:27:03</div>
+            <div class="text">
+                <span class="speaker">Sandeep Maheshwari:</span>Yeh jo policies hoti hain, endowment, ULIP aur yeh sab jitni bhi hoti hain, isme cover bahut kam hota hai.
+            </div>
+        </div>
+        <div class="segment">
+            <div class="timestamp">00:27:08</div>
+            <div class="text">
+                <span class="speaker">Sandeep Maheshwari:</span>Cover ka matlab samajhte hain? Cover matlab life cover. Jitne ki coverage hui hai.
+            </div>
+        </div>
+        <div class="segment">
+            <div class="timestamp">00:27:13</div>
+            <div class="text">
+                <span class="speaker">Sandeep Maheshwari:</span>Ki agar aap maano 50,000 ka premium doge toh aapko coverage milegi alag-alag plan mein alag-alag hoti hai, maan lo 10 se 20 lakh rupaye ki.
+            </div>
+        </div>
+        <div class="segment">
+            <div class="timestamp">00:27:22</div>
+            <div class="text">
+                <span class="speaker">Sandeep Maheshwari:</span>Maan lo agar aapko 20 lakh rupaye mil bhi gaya aapki family ko aapke jaane ke baad mein, agar aap saal ka 50,000 de rahe ho toh iska matlab achha khasa kama rahe ho.
+            </div>
+        </div>
+        <div class="segment">
+            <div class="timestamp">00:27:29</div>
+            <div class="text">
+                <span class="speaker">Sandeep Maheshwari:</span>Maan lo lakh rupaye mahine ka kama rahe ho. Toh kya us 20 lakh rupaye mein aapki saari jo bhi family ki problems hain woh saari solve ho jayegi?
+            </div>
+        </div>
+        <div class="segment">
+            <div class="timestamp">00:27:36</div>
+            <div class="text">
+                <span class="speaker">Sandeep Maheshwari:</span>Toh phir kara kyun rahe ho aisi insurance?
+            </div>
+        </div>
+        <div class="segment">
+            <div class="timestamp">00:27:37</div>
+            <div class="text">
+                <span class="speaker">Sandeep Maheshwari:</span>Bas laalach, ki itne saal baad itna paisa milega.
+            </div>
+        </div>
+        <div class="segment">
+            <div class="timestamp">00:27:40</div>
+            <div class="text">
+                <span class="speaker">Sandeep Maheshwari:</span>20 lakh ko agar aapki family, aapke jaane ke baad mein bank mein rakhti hai, wahan se kitna interest aayega?
+            </div>
+        </div>
+        <div class="segment">
+            <div class="timestamp">00:27:45</div>
+            <div class="text">
+                <span class="speaker">Sandeep Maheshwari:</span>Maan lo 7% bhi aa jaata hai toh 7% kitna hota hai?
+            </div>
+        </div>
+        <div class="segment">
+            <div class="timestamp">00:27:48</div>
+            <div class="text">
+                <span class="speaker">Sandeep Maheshwari:</span>1,40,000 20 lakh pe. Mahine ka kitna hua?
+            </div>
+            <div class="segment">
+            <div class="timestamp">00:27:48</div>
+            <div class="text">
+                <span class="speaker">Sandeep Maheshwari:</span>1,40,000 20 lakh pe. Mahine ka kitna hua?
+            </div>
+        </div>
+        <div class="segment">
+            <div class="timestamp">00:27:51</div>
+            <div class="text">
+                <span class="speaker">Sandeep Maheshwari:</span>12,000 rupaye mahina.
+            </div>
+        </div>
+        <div class="segment">
+            <div class="timestamp">00:27:54</div>
+            <div class="text">
+                <span class="speaker">Sandeep Maheshwari:</span>Chalo 1 lakh bhi hata dete hain. Agar aapki salary 50,000 thi, toh kya 12,000 rupaye mahina bahut hai aapke liye, aapki wife ke liye, aapke bachchon ke liye, aapke mother-father ke liye, sabke liye bahut hai?
+            </div>
+        </div>
+        <div class="segment">
+            <div class="timestamp">00:28:05</div>
+            <div class="text">
+                <span class="speaker">Audience:</span>Bilkul nahi.
+            </div>
+        </div>
+    </div>
+</body>
+</html>
+```
+                
